# rmbg

./: .gitignore  README.md  pyproject.toml
macos/: .gitignore  Package.swift  README-macos.md
macos/Scripts/: build-app.sh  run.sh
macos/Sources/Rmbg/App/: AppCommands.swift  RmbgApp.swift
macos/Sources/Rmbg/Backend/: BackendBridge.swift  BackendCommand.swift  BackendError.swift  BackendJSON.swift  BackendLocator.swift  BatchRunState.swift  LineStream.swift
macos/Sources/Rmbg/Resources/: Info.plist
macos/Sources/Rmbg/Stores/: BackendHealthStore.swift  BannerCenter.swift  JobStore.swift  RecentsStore.swift  SelectionStore.swift  SettingsStore.swift
macos/Sources/Rmbg/Styling/: AnimationCurves.swift  HapticTrigger.swift  Materials.swift  Palette.swift  Spacing.swift  Typography.swift
macos/Sources/Rmbg/Utilities/: FileManager+Reveal.swift  HexColor.swift  Logger.swift  URL+Image.swift
macos/Sources/Rmbg/Views/: RootView.swift
macos/Sources/Rmbg/Views/Batch/: BatchAggregateHeader.swift  BatchQueueView.swift  BatchRow.swift
macos/Sources/Rmbg/Views/Detail/: BeforeAfterSlider.swift  CheckerboardBackground.swift  DetailFailureView.swift  DetailImageLoader.swift  DetailMetadataStrip.swift  DetailView.swift  FloatingActionMenu.swift  ScrollWheelCatcher.swift  SingleDetailView.swift  ZoomPanContainer.swift
src/rmbg_backend/: __init__.py  auth.py  batch.py  cli.py  config.py  device.py  engine.py  jsonio.py  paths.py  preflight.py  preview.py  processor.py  schemas.py
tests/: test_batch.py  test_paths.py  test_preflight.py  test_schemas.py
(+19 files in other folders)
