[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rmbg-backend"
version = "0.1.0"
description = "Local backend worker for RMBG-2.0 background removal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Private, non-commercial use" }
authors = [{ name = "mhdquan" }]
dependencies = [
  "huggingface-hub>=0.23",
  "kornia>=0.7",
  "numpy<2",
  "pillow>=10.0",
  "pillow-heif>=0.16",
  "timm>=0.9",
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.43,<5",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
rmbg-backend = "rmbg_backend.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rmbg_backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
